sub header section added

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <link rel="shortcut icon" href="favicon.ico" />
 
     <!--font-awesome link for icons-->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
     <!-- Default style-sheet is for 'media' type screen (color computer display).  -->
     <link rel="stylesheet" media="screen" href="assets/css/style.css" >
@@ -36,7 +36,26 @@
     <div class="container">
       <!--header starts here-->
       <header>
-        
+        <!--sub header starts here-->
+        <div class="sub-header-container">
+          <div class="wrapper">
+            <div class="sub-header">
+              <div class="sub-header-contact">
+                <i class="fa-sharp fa-solid fa-envelope"></i>
+                <a href="mailto:info@company.com">info@company.com</a>
+                <i class="fa-solid fa-phone-flip"></i>
+                <a href="tel:0100200340">010-020-0340</a>
+              </div>
+              <div class="sub-header-media">
+                <i class="fa-brands fa-facebook-f"></i>
+                <i class="fa-brands fa-instagram"></i>
+                <i class="fa-brands fa-twitter"></i>
+                <i class="fa-brands fa-linkedin"></i>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!--sub header ends here-->
       </header>
       <!--header ends here-->
       <!--main starts here-->
