main header section added

--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
             <div class="sub-header">
               <div class="sub-header-contact">
                 <i class="fa-sharp fa-solid fa-envelope"></i>
-                <a href="mailto:info@company.com">info@company.com</a>
+                <a href="mailto:info@company.com" title="email">info@company.com</a>
                 <i class="fa-solid fa-phone-flip"></i>
-                <a href="tel:0100200340">010-020-0340</a>
+                <a href="tel:0100200340" title="telephone">010-020-0340</a>
               </div>
               <div class="sub-header-media">
                 <i class="fa-brands fa-facebook-f"></i>
@@ -56,11 +56,33 @@
           </div>
         </div>
         <!--sub header ends here-->
+        <!--main header starts here-->
+        <div class="main-header-container">
+          <div class="wrapper">
+            <div class="main-header">
+              <h1 class="logo"><a href="#" title="logo" target="_self">Zay</a></h1>
+              <nav class="header-nav">
+                <ul class="header-nav-links">
+                  <li><a href="#" title="Home" target="_self">Home</a></li>
+                  <li><a href="#" title="About" target="_self">About</a></li>
+                  <li><a href="#" title="Shop" target="_self">Shop</a></li>
+                  <li><a href="#" title="Contact" target="_self">Contact</a></li>
+                </ul>
+                <ul class="main-header-icons"> 
+                  <li><i class="fa-solid fa-magnifying-glass"></i></li>
+                  <li><a href="#" title="cart" target="_self"><i class="fa-solid fa-cart-circle-arrow-down"></i></a></li>
+                  <li><a href="#" title="profile" target="_self"><i class="fa-solid fa-user"></i></a></li>
+                </ul>
+              </nav>
+            </div>
+          </div>
+        </div>
+        <!--main header ends here-->
       </header>
       <!--header ends here-->
       <!--main starts here-->
       <main>
-
+        
       </main>
       <!--main ends here-->
 
