banner section added

--- a/index.html
+++ b/index.html
@@ -82,7 +82,35 @@
       <!--header ends here-->
       <!--main starts here-->
       <main>
-        
+        <!-- banner section starts here -->
+        <section class="banner-secion">
+          <div class="banner-container">
+            <div class="wrapper">
+              <div class="banner-top">
+                <i class="fa-duotone fa-less-than"></i>
+                <div class="banner-para">
+                  <h2>proident occaecat</h2>
+                  <h3>Aliquip ex ea commodo consequat</h3>
+                  <p>
+                    You are permitted to use this Zay CSS template for your
+                    commercial websites. You are not permitted to re-distribute
+                    the template ZIP file in any kind of template collection websites.
+                  </p>
+                </div>
+                <figure class="banner-img">
+                  <img src="https://dummyimage.com/333x439/000000/fff" alt="">
+                </figure>
+                <i class="fa-duotone fa-greater-than"></i>  
+              </div>
+              <ul class="banner-bottom">
+                <li></li>
+                <li class="active"></li>
+                <li></li>              
+              </ul>
+            </div>
+          </div>
+        </section>
+        <!-- banner section ends here -->
       </main>
       <!--main ends here-->
 
