product section added

--- a/index.html
+++ b/index.html
@@ -130,10 +130,10 @@
                 <figure>
                   <img src="https://dummyimage.com/271x293/000000/fff" alt="">
                   <figcaption>Watches</figcaption>
-                </figure>
-                <button>
-                  <a href="#" title="Shop">Go Shop</a>
-                </button>
+                  </fiWatchesgure>
+                  <button>
+                    <a href="#" title="Shop">Go Shop</a>
+                  </button>
               </li>
               <li>
                 <figure>
@@ -158,6 +158,104 @@
         </div>
       </section>
       <!-- categories section ends here -->
+
+      <!-- product section starts here -->
+      <section class="product-section">
+        <div class="product-container">
+          <div class="wrapper">
+            <div class="product-top">
+              <h2>Featured Product</h2>
+              <p>
+                Reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+                pariatur. Excepteur sint occaecat cupidatat non proident.
+              </p>
+            </div>
+            <div class="product-bottom">
+              <article>
+                <figure>
+                  <a href="#" title="Gym Weight" target="_self">
+                    <img src="https://dummyimage.com/250x263/000000/fff" alt="">
+                  </a>
+                </figure>
+                <div class="article-bottom">
+                  <div class="ratings-price">
+                    <ul class="star-ratings">
+                      <li class="yellow-star"><i class="fa-solid fa-star"></i></li>
+                      <li class="yellow-star"><i class="fa-solid fa-star"></i></li>
+                      <li class="yellow-star"><i class="fa-solid fa-star"></i></li>
+                      <li class="gray-star"><i class="fa-solid fa-star"></i></li>
+                      <li class="gray-star"><i class="fa-solid fa-star"></i></li>
+                    </ul>
+                    <span class="price">$240.00</span>
+                  </div>
+                  <h3><a href="#" title="Gym Weight">Gym Weight</a></h3>
+                  <p>
+                    Lorem ipsum dolor sit amet,
+                    consectetur adipisicing elit. Sunt in
+                    culpa qui officia deserunt.
+                  </p>
+                  <h4><a href="#" title="Reviews" target="_self">Reviews (24)</a></h4>
+                </div>
+              </article>
+
+              <article>
+                <figure>
+                  <a href="#" title="Cloud Nike Shoes" target="_self">
+                    <img src="https://dummyimage.com/250x263/000000/fff" alt="">
+                  </a>
+                </figure>
+                <div class="article-bottom">
+                  <div class="ratings-price">
+                    <ul class="star-ratings">
+                      <li class="yellow-star"><i class="fa-solid fa-star"></i></li>
+                      <li class="yellow-star"><i class="fa-solid fa-star"></i></li>
+                      <li class="yellow-star"><i class="fa-solid fa-star"></i></li>
+                      <li class="gray-star"><i class="fa-solid fa-star"></i></li>
+                      <li class="gray-star"><i class="fa-solid fa-star"></i></li>
+                    </ul>
+                    <span class="price">$480.00</span>
+                  </div>
+                  <h3><a href="#" title="Gym Weight">Cloud Nike Shoes</a></h3>
+                  <p>
+                    Aenean gravida dignissim finibus
+                    Nullam ipsum diam, posuere vitae
+                    pharetra sed, commodo ullamcorper.
+                  </p>
+                  <h4><a href="#" title="Reviews" target="_self">Reviews (48)</a></h4>
+                </div>
+              </article>
+
+              <article>
+                <figure>
+                  <a href="#" title="Summer Addides Shoes" target="_self">
+                    <img src="https://dummyimage.com/250x263/000000/fff" alt="">
+                  </a>
+                </figure>
+                <div class="article-bottom">
+                  <div class="ratings-price">
+                    <ul class="star-ratings">
+                      <li class="yellow-star"><i class="fa-solid fa-star"></i></li>
+                      <li class="yellow-star"><i class="fa-solid fa-star"></i></li>
+                      <li class="yellow-star"><i class="fa-solid fa-star"></i></li>
+                      <li class="yellow-star"><i class="fa-solid fa-star"></i></li>
+                      <li class="yellow-star"><i class="fa-solid fa-star"></i></li>
+                    </ul>
+                    <span class="price">$360.00</span>
+                  </div>
+                  <h3><a href="#" title="Gym Weight">Summer Addides Shoes</a></h3>
+                  <p>
+                    Curabitur ac mi sit amet diam luctus porta. 
+                    Phasellus pulvinar sagittis diam,
+                    et scelerisque ipsum lobortis nec.
+                  </p>
+                  <h4><a href="#" title="Reviews" target="_self">Reviews (74)</a></h4>
+                </div>
+              </article>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- product section ends here -->
     </main>
     <!--main ends here-->
 
