footer section added

--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
           <div class="sub-header">
             <div class="sub-header-contact">
               <i class="fa-sharp fa-solid fa-envelope"></i>
-              <a href="mailto:info@company.com" title="email">info@company.com</a>
+              <a href="mailto:info@company.com" title="email" target="_self">info@company.com</a>
               <i class="fa-solid fa-phone-flip"></i>
-              <a href="tel:0100200340" title="telephone">010-020-0340</a>
+              <a href="tel:0100200340" title="telephone" target="_self">010-020-0340</a>
             </div>
             <div class="sub-header-media">
               <i class="fa-brands fa-facebook-f"></i>
@@ -62,7 +62,7 @@
       <div class="main-header-container">
         <div class="wrapper">
           <div class="main-header">
-            <h1 class="logo"><a href="#" title="logo" target="_self">Zay</a></h1>
+            <h1 class="logo"><a href="#" title="logo" <i class="fa-solid fa-phone-flip"></i>target="_self">Zay</a></h1>
             <nav class="header-nav">
               <ul class="header-nav-links">
                 <li><a href="#" title="Home" target="_self">Home</a></li>
@@ -72,7 +72,12 @@
               </ul>
               <ul class="main-header-icons">
                 <li><i class="fa-solid fa-magnifying-glass"></i></li>
-                <li><a href="#" title="cart" target="_self"><i class="fa-solid fa-cart-circle-arrow-down"></i></a></li>
+                <li><a href="#" title="cart" t<div class="sub-header-media">
+                  <i class="fa-brands fa-facebook-f"></i>
+                  <i class="fa-brands fa-instagram"></i>
+                  <i class="fa-brands fa-twitter"></i>
+                  <i class="fa-brands fa-linkedin"></i>
+                </div>arget="_self"><i class="fa-solid fa-cart-circle-arrow-down"></i></a></li>
                 <li><a href="#" title="profile" target="_self"><i class="fa-solid fa-user"></i></a></li>
               </ul>
             </nav>
@@ -244,7 +249,7 @@
                   </div>
                   <h3><a href="#" title="Gym Weight">Summer Addides Shoes</a></h3>
                   <p>
-                    Curabitur ac mi sit amet diam luctus porta. 
+                    Curabitur ac mi sit amet diam luctus porta.
                     Phasellus pulvinar sagittis diam,
                     et scelerisque ipsum lobortis nec.
                   </p>
@@ -261,7 +266,75 @@
 
     <!--footer starts here-->
     <footer>
+      <div class="footer-container">
+        <div class="footer-top">
+          <div class="wrapper">
+            <div class="flex">
+              <div class="zay-shop">
+                <h3>Zay Shop</h3>
+                <div class="horizontal-line"></div>
+                <ul>
+                  <li>
+                    <i class="fa-solid fa-location-dot"></i>
+                    <address>123 Consectetur at ligula 10660</address>
+                  </li>
+                  <li>
+                    <i class="fa-solid fa-phone-flip"></i>
+                    <a href="tel:0100200340" title="telephone" target="_self">010-020-0340</a>
+                  </li>
+                  <li>
+                    <i class="fa-sharp fa-solid fa-envelope"></i>
+                    <a href="mailto:info@company.com" title="email" target="_self">info@company.com</a>
+                  </li>
+                </ul>
+              </div>
+              <div class="products-list">
+                <h3>Products</h3>
+                <div class="horizontal-line"></div>
+                <ul>Luxury
+                  <li><a href="#" title="Luxury" target="_self">Luxury</a></li>
+                  <li><a href="#" title="Sport Wear" target="_self">Sport Wear</a></li>
+                  <li><a href="#" title="Men's Shoes" target="_self">Men's Shoes</a></li>
+                  <li><a href="#" title="Women's Shoes" target="_self">Women's Shoes</a></li>
+                  <li><a href="#" title="Popular Dress" target="_self">Popular Dress</a></li>
+                  <li><a href="#" title="Gym Accessories" target="_self">Gym Accessories</a></li>
+                  <li><a href="#" title="Sport Shoes" target="_self">Sport Shoes</a></li>
+                </ul>
+              </div>
+              <div class="further-info">
+                <h3>Further Info</h3>
+                <div class="horizontal-line"></div>
+                <ul>
+                  <li><a href="#" title="Home" target="_self">Home</a></li>
+                  <li><a href="#" title="About Us" target="_self">About Us</a></li>
+                  <li><a href="#" title="Shop Locations" target="_self">Shop Locations</a></li>
+                  <li><a href="#" title="FAQs" target="_self">FAQs</a></li>
+                  <li><a href="#" title="Contact" target="_self">Contact</a></li>
+                </ul>
+              </div>
+            </div>
 
+            <div class="footer-mid">
+              <div class="sub-header-media">
+                <i class="fa-brands fa-facebook-f"></i>
+                <i class="fa-brands fa-instagram"></i>
+                <i class="fa-brands fa-twitter"></i>
+                <i class="fa-brands fa-linkedin"></i>
+              </div>
+              <div class="email-input">
+                <input type="text" placeholder="Email address">
+                <button>Subscribe</button>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="footer-bottom">
+          <div class="wrapper">
+            <p>Copyright &copy; 2021 Company Name | Designed by <span class="underline">TemplateMo</span></p>
+          </div>
+        </div>
+      </div>
     </footer>
     <!--footer ends here-->
 
