html validators error solved

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <meta http-equiv="Expires" content="0" /> -->
 
   <!-- Place favicon.ico in the root directory: mathiasbynens.be/notes/touch-icons -->
-  <link rel="shortcut icon" href="favicon.ico" />
+  <link rel="shortcut icon" href="favicon.ico">
 
   <!--font-awesome link for icons-->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -62,7 +62,7 @@
       <div class="main-header-container">
         <div class="wrapper">
           <div class="main-header">
-            <h1 class="logo"><a href="#" title="logo" <i class="fa-solid fa-phone-flip"></i>target="_self">Zay</a></h1>
+            <h1 class="logo"><a href="#" title="logo" target="_self">Zay</a></h1>
             <nav class="header-nav">
               <ul class="header-nav-links">
                 <li><a href="#" title="Home" target="_self">Home</a></li>
@@ -72,12 +72,7 @@
               </ul>
               <ul class="main-header-icons">
                 <li><i class="fa-solid fa-magnifying-glass"></i></li>
-                <li><a href="#" title="cart" t<div class="sub-header-media">
-                  <i class="fa-brands fa-facebook-f"></i>
-                  <i class="fa-brands fa-instagram"></i>
-                  <i class="fa-brands fa-twitter"></i>
-                  <i class="fa-brands fa-linkedin"></i>
-                </div>arget="_self"><i class="fa-solid fa-cart-circle-arrow-down"></i></a></li>
+                <li><a href="#" title="cart" target="_self"><i class="fa-solid fa-cart-arrow-down"></i></a></li>
                 <li><a href="#" title="profile" target="_self"><i class="fa-solid fa-user"></i></a></li>
               </ul>
             </nav>
@@ -135,28 +130,28 @@
                 <figure>
                   <img src="https://dummyimage.com/271x293/000000/fff" alt="">
                   <figcaption>Watches</figcaption>
-                  </fiWatchesgure>
-                  <button>
-                    <a href="#" title="Shop">Go Shop</a>
-                  </button>
+                </figure>
+                <div class="back-green">
+                  <a href="#" title="Shop" target="_self">Go Shop</a>
+                </div>
               </li>
               <li>
                 <figure>
                   <img src="https://dummyimage.com/271x293/000000/fff" alt="">
                   <figcaption>Shoes</figcaption>
                 </figure>
-                <button>
-                  <a href="#" title="Shop">Go Shop</a>
-                </button>
+                <div class="back-green">
+                  <a href="#" title="Shop" target="_self">Go Shop</a>
+                </div>
               </li>
               <li>
                 <figure>
                   <img src="https://dummyimage.com/271x293/000000/fff" alt="">
                   <figcaption>Accessories</figcaption>
                 </figure>
-                <button>
-                  <a href="#" title="Shop">Go Shop</a>
-                </button>
+                <div class="back-green">
+                  <a href="#" title="Shop" target="_self">Go Shop</a>
+                </div>
               </li>
             </ul>
           </div>
@@ -291,7 +286,7 @@
               <div class="products-list">
                 <h3>Products</h3>
                 <div class="horizontal-line"></div>
-                <ul>Luxury
+                <ul>
                   <li><a href="#" title="Luxury" target="_self">Luxury</a></li>
                   <li><a href="#" title="Sport Wear" target="_self">Sport Wear</a></li>
                   <li><a href="#" title="Men's Shoes" target="_self">Men's Shoes</a></li>
