--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
         <div class="header-top">
           <div class="wrapper">
             <div class="header-top-contact">
-              <a href="mailto:info@company.com" title="email" class="mail-icon">info@company.com</a>
-              <a href="tel:0100200340" title="telephone" class="phone-icon">010-020-0340</a>
+              <a href="mailto:info@company.com" title="email" class="icon mail-icon">info@company.com</a>
+              <a href="tel:0100200340" title="telephone" class="icon phone-icon">010-020-0340</a>
             </div>
             <ul class="header-top-media">
               <li>
