banner sections style added

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
               <li>
                 <a href="#FIXME" title="facebook" class="icon facebook" target="_blank"
                   rel="noopener noreferrer">Facebook</a>
+
               </li>
               <li>
                 <a href="#FIXME" title="instagram" class="icon instagram" target="_blank"
@@ -98,9 +99,11 @@
               </li>
               <li>
                 <a href="#FIXME" title="cart" class="cart-icon">Cart</a>
+                <div class="cart-value">7</div>
               </li>
               <li>
                 <a href="#FIXME" title="profile" class="profile-icon">profile</a>
+                <div class="profile-value">+99</div>
               </li>
             </ul>
           </div>
@@ -117,13 +120,15 @@
         <div class="wrapper">
           <ul class="banner-slider">
             <li class="active">
-              <h2>proident occaecat</h2>
-              <h3>Aliquip ex ea commodo consequat</h3>
-              <p>
-                You are permitted to use this Zay CSS template for your
-                commercial websites. You are not permitted to re-distribute
-                the template ZIP file in any kind of template collection websites.
-              </p>
+              <div class="banner-text">
+                <h2>Proident occaecat</h2>
+                <h3>Aliquip ex ea commodo consequat</h3>
+                <p>
+                  You are permitted to use this Zay CSS template for your
+                  commercial websites. You are <span class="text-black">not permitted</span> to re-distribute
+                  the template ZIP file in any kind of template collection websites.
+                </p>
+              </div>
               <figure class="banner-img">
                 <img src="https://dummyimage.com/333x439/000000/fff" alt="bottle">
               </figure>
@@ -153,15 +158,15 @@
               </figure>
             </li>
           </ul>
-          <div class="previous-next-btn">
-            <button class="previous">Previous</button>
-            <button class="next">Next</button>
-          </div>
           <ul class="banner-navigation">
             <li></li>
             <li class="active"></li>
             <li></li>
           </ul>
+        </div>
+        <div class="previous-next-btn">
+          <button class="previous">Previous</button>
+          <button class="next">Next</button>
         </div>
       </section>
       <!-- banner section ends here -->
