products sections style added

--- a/index.html
+++ b/index.html
@@ -228,31 +228,31 @@
             <article>
               <figure>
                 <a href="#FIXME" title="Gym Weight">
-                  <img src="https://dummyimage.com/250x263/000000/fff" alt="Torch">
+                  <img src="https://dummyimage.com/350x250/403d40/000103" alt="Torch">
                 </a>
               </figure>
               <div class="article-bottom">
                 <div class="ratings-price">
                   <ul class="star-ratings">
                     <li class="yellow-star">
-                      star ratings
+                      <span class="text-hide">star ratings</span>
                     </li>
                     <li class="yellow-star">
-                      star ratings
+                      <span class="text-hide">star ratings</span>
                     </li>
                     <li class="yellow-star">
-                      star ratings
+                      <span class="text-hide">star ratings</span>
                     </li>
                     <li class="gray-star">
-                      star ratings
+                      <span class="text-hide">star ratings</span>
                     </li>
                     <li class="gray-star">
-                      star ratings
+                      <span class="text-hide">star ratings</span>
                     </li>
                   </ul>
                   <span class="price">$240.00</span>
                 </div>
-                <h3>
+                <h3 class="article-heading">
                   <a href="#FIXME" title="Gym Weight">Gym Weight</a>
                 </h3>
                 <p>
@@ -260,38 +260,38 @@
                   consectetur adipisicing elit. Sunt in
                   culpa qui officia deserunt.
                 </p>
-                <a href="#FIXME" title="Reviews">Reviews (24)</a>
+                <a href="#FIXME" title="Reviews" class="reviews">Reviews (24)</a>
               </div>
             </article>
 
             <article>
               <figure>
                 <a href="#FIXME" title="Cloud Nike Shoes">
-                  <img src="https://dummyimage.com/250x263/000000/fff" alt="Watch">
+                  <img src="https://dummyimage.com/350x250/403d40/000103" alt="Watch">
                 </a>
               </figure>
               <div class="article-bottom">
                 <div class="ratings-price">
                   <ul class="star-ratings">
                     <li class="yellow-star">
-                      star ratings
+                      <span class="text-hide">star ratings</span>
                     </li>
                     <li class="yellow-star">
-                      star ratings
+                      <span class="text-hide">star ratings</span>
                     </li>
                     <li class="yellow-star">
-                      star ratings
+                      <span class="text-hide">star ratings</span>
                     </li>
                     <li class="gray-star">
-                      star ratings
+                      <span class="text-hide">star ratings</span>
                     </li>
                     <li class="gray-star">
-                      star ratings
+                      <span class="text-hide">star ratings</span>
                     </li>
                   </ul>
                   <span class="price">$480.00</span>
                 </div>
-                <h3>
+                <h3 class="article-heading">
                   <a href="#FIXME" title="Gym Weight">Cloud Nike Shoes</a>
                 </h3>
                 <p>
@@ -299,38 +299,38 @@
                   Nullam ipsum diam, posuere vitae
                   pharetra sed, commodo ullamcorper.
                 </p>
-                <h4><a href="#FIXME" title="Reviews">Reviews (48)</a></h4>
+                <h4><a href="#FIXME" title="Reviews" class="reviews">Reviews (48)</a></h4>
               </div>
             </article>
 
             <article>
               <figure>
                 <a href="#FIXME" title="Summer Addides Shoes">
-                  <img src="https://dummyimage.com/250x263/000000/fff" alt="camera">
+                  <img src="https://dummyimage.com/350x250/403d40/000103" alt="camera">
                 </a>
               </figure>
               <div class="article-bottom">
                 <div class="ratings-price">
                   <ul class="star-ratings">
                     <li class="yellow-star">
-                      star ratings
+                      <span class="text-hide">star ratings</span>
                     </li>
                     <li class="yellow-star">
-                      star ratings
+                      <span class="text-hide">star ratings</span>
                     </li>
                     <li class="yellow-star">
-                      star ratings
+                      <span class="text-hide">star ratings</span>
                     </li>
                     <li class="yellow-star">
-                      star ratings
+                      <span class="text-hide">star ratings</span>
                     </li>
                     <li class="yellow-star">
-                      star ratings
+                      <span class="text-hide">star ratings</span>
                     </li>
                   </ul>
                   <span class="price">$360.00</span>
                 </div>
-                <h3>
+                <h3 class="article-heading">
                   <a href="#FIXME" title="Gym Weight">Summer Addides Shoes</a>
                 </h3>
                 <p>
@@ -338,7 +338,7 @@
                   Phasellus pulvinar sagittis diam,
                   et scelerisque ipsum lobortis nec.
                 </p>
-                <h4><a href="#FIXME" title="Reviews">Reviews (74)</a></h4>
+                <h4><a href="#FIXME" title="Reviews" class="reviews">Reviews (74)</a></h4>
               </div>
             </article>
           </div>
