footer sections style added

--- a/index.html
+++ b/index.html
@@ -50,7 +50,6 @@
               <li>
                 <a href="#FIXME" title="facebook" class="icon facebook" target="_blank"
                   rel="noopener noreferrer">Facebook</a>
-
               </li>
               <li>
                 <a href="#FIXME" title="instagram" class="icon instagram" target="_blank"
@@ -67,7 +66,7 @@
             </ul>
           </div>
         </div>
-        <!--sub header ends here-->
+        <!--top header ends here-->
         <!--bottom header starts here-->
         <div class="header-bottom">
           <div class="wrapper">
@@ -92,16 +91,16 @@
             </nav>
             <ul class="main-header-icons">
               <li>
-                <button class="search-icon"></button>
+                <button class="search-icon">search</button>
                 <form class="search-form">
                   <input type="text" placeholder="Search">
                 </form>
               </li>
-              <li>
+              <li class="cart">
                 <a href="#FIXME" title="cart" class="cart-icon">Cart</a>
                 <div class="cart-value">7</div>
               </li>
-              <li>
+              <li class="profile">
                 <a href="#FIXME" title="profile" class="profile-icon">profile</a>
                 <div class="profile-value">+99</div>
               </li>
@@ -109,7 +108,7 @@
           </div>
         </div>
       </div>
-      <!--main header ends here-->
+      <!--bottom header ends here-->
     </header>
     <!--header ends here-->
 
@@ -402,7 +401,7 @@
                 </ul>
               </div>
               <div class="further-info">
-                <h3>Further Info</h3>
+                <h5>Further Info</h5>
                 <ul>
                   <li>
                     <a href="#FIXME" title="Home" target="_self">Home</a>
@@ -425,19 +424,19 @@
 
             <div class="footer-mid">
               <ul class="sub-header-media">
-                <li>
+                <li class="medea-icon-circle">
                   <a href="#FIXME" title="facebook" class="icon facebook" target="_blank"
                     rel="noopener noreferrer">Facebook</a>
                 </li>
-                <li>
+                <li class="medea-icon-circle">
                   <a href="#FIXME" title="instagram" class="icon instagram" target="_blank"
                     rel="noopener noreferrer">Instagram</a>
                 </li>
-                <li>
+                <li class="medea-icon-circle">
                   <a href="#FIXME" title="twitter" class="icon twitter" target="_blank"
                     rel="noopener noreferrer">Twitter</a>
                 </li>
-                <li>
+                <li class="medea-icon-circle">
                   <a href="#FIXME" title="linked-in" class="icon linked-in" target="_blank"
                     rel="noopener noreferrer">Linked-in</a>
                 </li>
