--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
           </div>
           <div class="product-bottom">
             <article>
-              <figure>
+              <figure class="fig-product-image">
                 <a href="#FIXME" title="Gym Weight">
                   <img src="https://dummyimage.com/350x250/403d40/000103" alt="Torch">
                 </a>
