media queries for responsive design changes added

--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
                 <a href="#FIXME" title="profile" class="profile-icon">profile</a>
                 <div class="profile-value">+99</div>
               </li>
+              <li class="hamberger-icon">hamberger</li>
             </ul>
           </div>
         </div>
@@ -224,7 +225,7 @@
             </p>
           </div>
           <div class="product-bottom">
-            <article>
+            <article class="articles">
               <figure class="fig-product-image">
                 <a href="#FIXME" title="Gym Weight">
                   <img src="https://dummyimage.com/350x250/403d40/000103" alt="Torch">
@@ -263,7 +264,7 @@
               </div>
             </article>
 
-            <article>
+            <article  class="articles">
               <figure>
                 <a href="#FIXME" title="Cloud Nike Shoes">
                   <img src="https://dummyimage.com/350x250/403d40/000103" alt="Watch">
@@ -302,7 +303,7 @@
               </div>
             </article>
 
-            <article>
+            <article  class="articles">
               <figure>
                 <a href="#FIXME" title="Summer Addides Shoes">
                   <img src="https://dummyimage.com/350x250/403d40/000103" alt="camera">
@@ -369,7 +370,7 @@
                     <a href="tel:0100200340" title="010-020-0340" target="_blank" class="phone-icon">010-020-0340</a>
                   </li>
                   <li>
-                    <a href="mailto:info@company.com" title="email" target="_blank"
+                    <a href="mailto:info@company.com" title="info@company.com" target="_blank"
                       class="mail-icon">info@company.com</a>
                   </li>
                 </ul>
