--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
         <div class="header-top">
           <div class="wrapper">
             <div class="header-top-contact">
-              <a href="mailto:info@company.com" title="email" class="icon mail-icon">info@company.com</a>
-              <a href="tel:0100200340" title="telephone" class="icon phone-icon">010-020-0340</a>
+              <a href="mailto:info@company.com" title="email" class="mail-icon">info@company.com</a>
+              <a href="tel:0100200340" title="telephone" class="phone-icon">010-020-0340</a>
             </div>
             <ul class="header-top-media">
               <li>
@@ -61,7 +61,7 @@
               </li>
               <li>
                 <a href="#FIXME" title="linked-in" class="icon linked-in" target="_blank"
-                  rel="noopener noreferrer">Linked-in</a>
+                  rel="noopener noreferrer">Linkedin</a>
               </li>
             </ul>
           </div>
@@ -91,20 +91,20 @@
             </nav>
             <ul class="main-header-icons">
               <li>
-                <button class="search-icon">search</button>
+                <button class="icon search-icon">search</button>
                 <form class="search-form">
                   <input type="text" placeholder="Search">
                 </form>
               </li>
               <li class="cart">
-                <a href="#FIXME" title="cart" class="cart-icon">Cart</a>
+                <a href="#FIXME" title="cart" class="icon cart-icon">Cart</a>
                 <div class="cart-value">7</div>
               </li>
               <li class="profile">
-                <a href="#FIXME" title="profile" class="profile-icon">profile</a>
+                <a href="#FIXME" title="profile" class="icon profile-icon">profile</a>
                 <div class="profile-value">+99</div>
               </li>
-              <li class="hamberger-icon">hamberger</li>
+              <li class="icon hamberger-icon">hamberger</li>
             </ul>
           </div>
         </div>
@@ -130,7 +130,7 @@
                 </p>
               </div>
               <figure class="banner-img">
-                <img src="https://dummyimage.com/333x439/000000/fff" alt="bottle">
+                <img src="https://dummyimage.com/300x419/000000/fff" alt="bottle">
               </figure>
             </li>
             <li>
@@ -165,8 +165,8 @@
           </ul>
         </div>
         <div class="previous-next-btn">
-          <button class="previous">Previous</button>
-          <button class="next">Next</button>
+          <button class="icon previous">Previous</button>
+          <button class="icon next">Next</button>
         </div>
       </section>
       <!-- banner section ends here -->
@@ -234,20 +234,20 @@
               <div class="article-bottom">
                 <div class="ratings-price">
                   <ul class="star-ratings">
-                    <li class="yellow-star">
-                      <span class="text-hide">star ratings</span>
+                    <li class="icon yellow-star">
+                      star ratings
                     </li>
-                    <li class="yellow-star">
-                      <span class="text-hide">star ratings</span>
+                    <li class="icon yellow-star">
+                      star ratings
                     </li>
-                    <li class="yellow-star">
-                      <span class="text-hide">star ratings</span>
+                    <li class="icon yellow-star">
+                      star ratings
                     </li>
-                    <li class="gray-star">
-                      <span class="text-hide">star ratings</span>
+                    <li class="icon gray-star">
+                      star ratings
                     </li>
-                    <li class="gray-star">
-                      <span class="text-hide">star ratings</span>
+                    <li class="icon gray-star">
+                      star ratings
                     </li>
                   </ul>
                   <span class="price">$240.00</span>
@@ -273,20 +273,20 @@
               <div class="article-bottom">
                 <div class="ratings-price">
                   <ul class="star-ratings">
-                    <li class="yellow-star">
-                      <span class="text-hide">star ratings</span>
+                    <li class="icon yellow-star">
+                      star ratings
                     </li>
-                    <li class="yellow-star">
-                      <span class="text-hide">star ratings</span>
+                    <li class="icon yellow-star">
+                      star ratings
                     </li>
-                    <li class="yellow-star">
-                      <span class="text-hide">star ratings</span>
+                    <li class="icon yellow-star">
+                      star ratings
                     </li>
-                    <li class="gray-star">
-                      <span class="text-hide">star ratings</span>
+                    <li class="icon gray-star">
+                      star ratings
                     </li>
-                    <li class="gray-star">
-                      <span class="text-hide">star ratings</span>
+                    <li class="icon gray-star">
+                      star ratings
                     </li>
                   </ul>
                   <span class="price">$480.00</span>
@@ -312,20 +312,20 @@
               <div class="article-bottom">
                 <div class="ratings-price">
                   <ul class="star-ratings">
-                    <li class="yellow-star">
-                      <span class="text-hide">star ratings</span>
+                    <li class="icon yellow-star">
+                      star ratings
                     </li>
-                    <li class="yellow-star">
-                      <span class="text-hide">star ratings</span>
+                    <li class="icon yellow-star">
+                      star ratings
                     </li>
-                    <li class="yellow-star">
-                      <span class="text-hide">star ratings</span>
+                    <li class="icon yellow-star">
+                      star ratings
                     </li>
-                    <li class="yellow-star">
-                      <span class="text-hide">star ratings</span>
+                    <li class="icon yellow-star">
+                      star ratings
                     </li>
-                    <li class="yellow-star">
-                      <span class="text-hide">star ratings</span>
+                    <li class="icon yellow-star">
+                       star ratings
                     </li>
                   </ul>
                   <span class="price">$360.00</span>
