--- a/index.html
+++ b/index.html
@@ -71,12 +71,12 @@
         <div class="header-bottom">
           <div class="wrapper">
             <h1 class="logo">
-              <a href="#FIXME" title="Zay">Zay</a>
+              <a href="/index.html" title="Zay">Zay</a>
             </h1>
             <nav class="header-nav">
               <ul class="header-nav-links">
                 <li class="active">
-                  <a href="#FIXME" title="/index.html">Home</a>
+                  <a href="/index.html" title="/index.html">Home</a>
                 </li>
                 <li>
                   <a href="#FIXME" title="About">About</a>
@@ -93,7 +93,7 @@
               <li>
                 <button class="icon search-icon">search</button>
                 <form class="search-form">
-                  <input type="text" placeholder="Search">
+                  <input type="text" name="search" placeholder="Search">
                 </form>
               </li>
               <li class="cart">
@@ -104,8 +104,8 @@
                 <a href="#FIXME" title="profile" class="icon profile-icon">profile</a>
                 <div class="profile-value">+99</div>
               </li>
-              <li class="icon hamberger-icon">hamberger</li>
             </ul>
+            <span class="icon hamberger-icon">hamberger</span>
           </div>
         </div>
       </div>
@@ -118,6 +118,10 @@
       <!-- banner section starts here -->
       <section class="banner-section">
         <div class="wrapper">
+          <div class="previous-next-btn">
+            <button class="icon previous">Previous</button>
+            <button class="icon next">Next</button>
+          </div>
           <ul class="banner-slider">
             <li class="active">
               <div class="banner-text">
@@ -164,23 +168,17 @@
             <li></li>
           </ul>
         </div>
-        <div class="previous-next-btn">
-          <button class="icon previous">Previous</button>
-          <button class="icon next">Next</button>
-        </div>
       </section>
       <!-- banner section ends here -->
 
       <!-- categories section starts here -->
       <section class="categories-section">
         <div class="wrapper">
-          <div class="category-top">
-            <h2>Categories of The Month</h2>
-            <p>
-              Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
-              officia deserunt mollit anim id est laborum
-            </p>
-          </div>
+          <h3>Categories of The Month</h3>
+          <p>
+            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
+            officia deserunt mollit anim id est laborum
+          </p>
           <ul class="category-bottom">
             <li>
               <figure>
@@ -217,13 +215,11 @@
       <!-- product section starts here -->
       <section class="product-section">
         <div class="wrapper">
-          <div class="product-top">
-            <h2>Featured Product</h2>
-            <p>
-              Reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-              pariatur. Excepteur sint occaecat cupidatat non proident.
-            </p>
-          </div>
+          <h3>Featured Product</h3>
+          <p>
+            Reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+            pariatur. Excepteur sint occaecat cupidatat non proident.
+          </p>
           <div class="product-bottom">
             <article class="articles">
               <figure class="fig-product-image">
@@ -264,7 +260,7 @@
               </div>
             </article>
 
-            <article  class="articles">
+            <article class="articles">
               <figure>
                 <a href="#FIXME" title="Cloud Nike Shoes">
                   <img src="https://dummyimage.com/350x250/403d40/000103" alt="Watch">
@@ -303,7 +299,7 @@
               </div>
             </article>
 
-            <article  class="articles">
+            <article class="articles">
               <figure>
                 <a href="#FIXME" title="Summer Addides Shoes">
                   <img src="https://dummyimage.com/350x250/403d40/000103" alt="camera">
@@ -325,7 +321,7 @@
                       star ratings
                     </li>
                     <li class="icon yellow-star">
-                       star ratings
+                      star ratings
                     </li>
                   </ul>
                   <span class="price">$360.00</span>
@@ -355,9 +351,9 @@
           <div class="wrapper">
             <div class="flex">
               <div class="zay-shop">
-                <h5>
-                  <a href="#FIXME">Zay Shop</a>
-                </h5>
+                <h4>
+                  <a href="/index.html" title="zay shop">Zay Shop</a>
+                </h4>
                 <ul class="address-info">
                   <li>
                     <address>
@@ -446,7 +442,7 @@
                 <div class="input-group">
                   <input type="email" placeholder="Email address">
                 </div>
-                <button type="submit">Subscribe</button>
+                <input type="submit" value="Subscribe" />
               </form>
             </div>
           </div>
@@ -454,8 +450,10 @@
 
         <div class="footer-bottom">
           <div class="wrapper">
-            <p>Copyright &copy; 2021 Company Name | Designed by <a href="#FIXME" title="TemplateMo"
-                class="underline">TemplateMo</a></p>
+            <p>
+              Copyright &copy; 2021 Company Name | Designed by
+              <a href="#FIXME" title="TemplateMo" class="underline">TemplateMo</a>
+            </p>
           </div>
         </div>
       </div>
