--- a/index.html
+++ b/index.html
@@ -174,16 +174,18 @@
       <!-- categories section starts here -->
       <section class="categories-section">
         <div class="wrapper">
-          <h3>Categories of The Month</h3>
-          <p>
-            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
-            officia deserunt mollit anim id est laborum
-          </p>
+          <div class="categories-top">
+            <h3>Categories of The Month</h3>
+            <p>
+              Excepteur sint occaecat cupidatat non proident, sunt in culpa qui
+              officia deserunt mollit anim id est laborum
+            </p>
+          </div>
           <ul class="category-bottom">
             <li>
               <figure>
                 <a href="#FIXME" title="Watches">
-                  <img src="https://dummyimage.com/271x293/000000/fff" alt="Watches">
+                  <img src="https://dummyimage.com/271x271/000000/fff" alt="Watches">
                 </a>
                 <figcaption>Watches</figcaption>
               </figure>
@@ -192,7 +194,7 @@
             <li>
               <figure>
                 <a href="#FIXME" title="Shoes">
-                  <img src="https://dummyimage.com/271x293/000000/fff" alt="Shoes">
+                  <img src="https://dummyimage.com/271x271/000000/fff" alt="Shoes">
                 </a>
                 <figcaption>Shoes</figcaption>
               </figure>
@@ -201,7 +203,7 @@
             <li>
               <figure>
                 <a href="#FIXME" title="Accessories">
-                  <img src="https://dummyimage.com/271x293/000000/fff" alt="Glasses">
+                  <img src="https://dummyimage.com/271x271/000000/fff" alt="Glasses">
                 </a>
                 <figcaption>Accessories</figcaption>
               </figure>
@@ -215,11 +217,13 @@
       <!-- product section starts here -->
       <section class="product-section">
         <div class="wrapper">
-          <h3>Featured Product</h3>
-          <p>
-            Reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-            pariatur. Excepteur sint occaecat cupidatat non proident.
-          </p>
+          <div class="product-top">
+            <h3>Featured Product</h3>
+            <p>
+              Reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+              pariatur. Excepteur sint occaecat cupidatat non proident.
+            </p>
+          </div>
           <div class="product-bottom">
             <article class="articles">
               <figure class="fig-product-image">
