--- a/index.html
+++ b/index.html
@@ -104,8 +104,10 @@
                 <a href="#FIXME" title="profile" class="icon profile-icon">profile</a>
                 <div class="profile-value">+99</div>
               </li>
+              <li class="icon hamberger-icon">
+                hamberger
+              </li>
             </ul>
-            <span class="icon hamberger-icon">hamberger</span>
           </div>
         </div>
       </div>
